# opengate

./: .checkov.baseline  .checkov.yaml  .dockerignore  .editorconfig  .gitignore  .gitleaks.toml  .mcp.json  .shellcheckrc  .trivyignore  .yamllint.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  index.html  sonar-project.properties
.claude/: conventions.md  decisions.md  doc-link-baseline.txt  phases.md  settings.json  shell-policy.exceptions  techdebt.md
.claude/baseline/: BASELINE.md  pmat-repo-score-2026-05-20.json  pmat-tdg-baseline-2026-05-20.json
.claude/hooks/: git-post-commit.sh  post-push-clean-caches.sh  posttooluse-git-commit-push.sh  posttooluse-shell-quality.sh  (+13 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
agent/: Cargo.toml  deny.toml
agent/.cargo/: mutants.toml
agent/crates/edge-tsdb/: Cargo.toml
agent/crates/edge-tsdb/benches/: tsdb_bench.rs
agent/crates/edge-tsdb/src/: append_only.rs  baseline.rs  bitio.rs  compact.rs  config.rs  corpus.rs  crc.rs  deflate.rs  error.rs  fault.rs  frame.rs  gorilla.rs  lib.rs  redb_backend.rs  redb_compact.rs  redb_store.rs  sample.rs  substrate.rs  tier.rs
agent/crates/edge-tsdb/src/store/: blocks.rs  mod.rs
agent/crates/edge-tsdb/tests/: cold_tier_test.rs  compact_test.rs  gates_test.rs  store_test.rs  tier_test.rs
agent/crates/mesh-agent/: Cargo.toml  build.rs
agent/crates/mesh-agent-core/: Cargo.toml
agent/crates/mesh-agent-core/benches/: edge_sentinel_bench.rs
agent/crates/mesh-agent-core/src/: config.rs  connection.rs  error.rs  file_ops.rs  identity.rs  lib.rs  maintenance.rs  platform.rs  session.rs  session_error.rs  terminal.rs  update.rs  webrtc.rs
agent/crates/mesh-agent-core/src/alerts/: evaluator.rs  mod.rs
agent/crates/mesh-agent-core/src/discovery/: containers.rs  db_engines.rs  mod.rs  packages.rs  ports.rs  services.rs
agent/crates/mesh-agent-core/src/ml/: backfill.rs  ensemble.rs  host_metric_stream.rs  kmeans.rs  log_rate.rs  mod.rs  redact.rs  sampler.rs  store_sink.rs  window.rs
agent/crates/mesh-agent-core/src/session/: handler.rs  mod.rs  relay.rs  terminal_handle.rs
agent/crates/mesh-agent-core/src/session/handlers/: file.rs  keyboard.rs  mod.rs  mouse.rs  switch.rs  terminal_control.rs  webrtc.rs
agent/crates/mesh-agent-core/tests/: alerts_test.rs  backfill_replay_test.rs  file_handler_test.rs  host_metric_stream.rs  keyboard_handler_test.rs  maintenance_test.rs  ml_allocation_test.rs  ml_footprint_test.rs  ml_mutation_test.rs  ml_store_test.rs  ml_test.rs  module-graph.snap  mouse_handler_test.rs  switch_handler_test.rs  terminal_control_handler_test.rs  webrtc_handler_test.rs
agent/crates/mesh-agent-ipc/: Cargo.toml
agent/crates/mesh-agent-ipc/src/: lib.rs
agent/crates/mesh-agent-tray/: Cargo.toml  build.rs
agent/crates/mesh-agent-tray/src/: ipc.rs  logs.rs  main.rs  menu.rs  notifications.rs  tray.rs
agent/crates/mesh-agent/src/: backfill_loop.rs  edge_sentinel.rs  host_logs.rs  ipc_server.rs  logs.rs  main.rs
agent/crates/mesh-agent/tests/: cli_flags.rs  connection_test.rs  test_helpers.rs
agent/crates/mesh-protocol/: Cargo.toml
agent/crates/mesh-protocol/benches/: codec_bench.rs
agent/crates/mesh-protocol/src/: codec.rs  control.rs  error.rs  lib.rs  types.rs
agent/crates/mesh-protocol/src/types/: device.rs  frame.rs  handshake.rs  hardware.rs  input.rs  log_entry.rs  mod.rs  session.rs
agent/crates/mesh-protocol/tests/: codec_test.rs  codec_tests.rs  decode_corpus_test.rs  golden.rs  golden_test.rs  property_test.rs  proptest_tests.rs  reverse_golden_test.rs
agent/crates/platform-linux/: Cargo.toml
agent/crates/platform-linux/src/: lib.rs  runtime.rs  service.rs
agent/crates/platform-linux/src/capture/: mod.rs  x11_capture.rs
agent/crates/platform-linux/tests/: runtime_test.rs
agent/crates/platform-windows/: Cargo.toml
agent/crates/platform-windows/src/: capture.rs  input.rs  lib.rs  service.rs
agent/fuzz/: Cargo.toml
agent/fuzz/corpus/decode/: control_bad_msgpack
agent/fuzz/fuzz_targets/: decode.rs
api/: openapi.yaml
benchmarks/: baseline.json
deploy/: .env.example  .env.monitoring.example  docker-compose.monitoring.yml  docker-compose.multiserver.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml
docs/: API-Reference.md  Agent-Updates.md  Architecture-Decision-Records.md  Architecture.md  CI-Pipeline.md  Container-Images.md  Continuous-Deployment.md  Data-Lifecycle.md  Database.md  Fault-Injection.md  Home.md  Infrastructure.md  Kubernetes-Migration.md  Kubernetes.md  Monitoring.md  Multiscale-Readiness.md  Platform-Abstraction.md  README.md  Security-and-Dependencies.md  Shell-Quality.md  Testing.md  Wire-Protocol.md  mutation-history.jsonl
scripts/: arch-lint-flip.sh  benchmark-summarize.sh  benchmark-vm-push.sh  build-image-gate.sh  check-openapi-spec-drift.sh  check-shell-policy.sh  docker-credstore-guard.sh  e2e-multiserver.sh  install-semgrep.sh  install-shell-tools.sh  loadtest-regression-check.sh  loadtest-summarize.sh  loadtest-vm-push.sh  mutation-baseline-fetch.sh  mutation-loki-push.sh  mutation-merge-go.sh  mutation-merge-rust.sh  mutation-status-build.sh  mutation-status-vm-push.sh  mutation-summarize.sh  mutation-vm-push.sh  no-vm-ssh-guard.sh  pentest-review.sh  pmat-loki-push.sh  pmat-loki-query.sh  pmat-precommit.sh  pmat-summarize.sh  pmat-vm-push.sh  pmat-vm-query.sh  precommit-gauntlet.sh  release-agent-gate.sh  shell-quality.sh  sonar-coverage-guard.sh  sonar-duplication-guard.sh  tdd-check.sh  terraform-drift-loki-push.sh  terraform-drift-summarize.sh  terraform-drift-vm-push.sh
server/: .go-arch-lint.yml  .golangci.yml  .gosec.json  .gremlins.yaml  go.mod  go.sum  oapi-codegen.yaml
web/: .dependency-cruiser.cjs  .gitignore  .lighthouserc.json  .size-limit.json  dependency-cruiser.snapshot.json  eslint.config.js  eslint.security.config.js  package-lock.json  package.json  playwright.config.ts  playwright.staging.config.ts  stryker.config.json  tsconfig.app.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
(+1366 files in other folders)
