[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
bytes = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1"
async-trait = "0.1"

quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.14"
rustls-pemfile = "2"

tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
portable-pty = "0.9"
url = "2"
webrtc = "0.17"

# Dev dependencies
proptest = "1"
tempfile = "3"
