[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
bytes = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1"
async-trait = "0.1"

quinn = "0.11.9"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.14"
rustls-pemfile = "2"

tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
portable-pty = "0.8"
url = "2"
webrtc = "0.17"

gethostname = "0.5"
ed25519-dalek = { version = "2", features = ["std"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Dev dependencies
proptest = "1"
tempfile = "3"
