[package]
name = "mesh-agent-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
mesh-protocol = { path = "../mesh-protocol" }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
quinn.workspace = true
rustls.workspace = true
rcgen.workspace = true
rustls-pemfile.workspace = true
rmp-serde.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
