[package]
name = "mesh-agent-core"
version = "0.14.1"
edition.workspace = true

[dependencies]
mesh-protocol = { path = "../mesh-protocol" }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
quinn.workspace = true
rustls.workspace = true
rcgen.workspace = true
rustls-pemfile.workspace = true
rmp-serde.workspace = true
async-trait.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
portable-pty.workspace = true
url.workspace = true
webrtc.workspace = true
bytes.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
hex.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
