[package]
name = "mesh-agent-core"
version = "0.15.4"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
mesh-protocol = { path = "../mesh-protocol" }
edge-tsdb = { path = "../edge-tsdb", default-features = false, features = ["cold-deflate"] }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
quinn.workspace = true
rustls.workspace = true
rcgen.workspace = true
rustls-pemfile.workspace = true
rmp-serde.workspace = true
rand.workspace = true
async-trait.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
portable-pty.workspace = true
url.workspace = true
webrtc.workspace = true
bytes.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
hex.workspace = true
reqwest.workspace = true
image.workspace = true
sysinfo.workspace = true
serde_json.workspace = true

[dev-dependencies]
edge-tsdb = { path = "../edge-tsdb", default-features = false, features = ["cold-deflate"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
mockito.workspace = true
criterion.workspace = true

[[bench]]
name = "edge_sentinel_bench"
harness = false

[lints]
workspace = true
