[package]
name = "mesh-agent-tray"
version = "0.15.4"
edition.workspace = true

[[bin]]
name = "mesh-agent-tray"
path = "src/main.rs"

[dependencies]
mesh-agent-ipc = { path = "../mesh-agent-ipc" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
image.workspace = true

tray-icon = "0.21"
muda = "0.17"
open = "5"
notify-rust = "4"
arboard = "3"

[dev-dependencies]
tempfile.workspace = true
