[package]
name = "mesh-agent"
version = "0.15.4"
edition.workspace = true

[[bin]]
name = "mesh-agent"
path = "src/main.rs"

[dependencies]
mesh-agent-core = { path = "../mesh-agent-core" }
mesh-protocol = { path = "../mesh-protocol" }
platform-linux = { path = "../platform-linux", features = ["x11"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow.workspace = true
clap = { version = "4", features = ["derive", "env"] }
hex.workspace = true
quinn.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
gethostname.workspace = true
sha2.workspace = true
getrandom = "0.4"
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
pem = "3"
semver.workspace = true

[dev-dependencies]
rcgen.workspace = true
tempfile.workspace = true
