[package]
name = "mesh-protocol"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde.workspace = true
serde_bytes = "0.11"
rmp-serde.workspace = true
bytes.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json = "1"
