[package]
name = "mesh-protocol"
version = "0.8.0"
edition.workspace = true

[dependencies]
serde.workspace = true
serde_bytes = "0.11"
rmp-serde.workspace = true
bytes.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
getrandom = "0.3"

[dev-dependencies]
proptest.workspace = true
serde_json = "1"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "codec_bench"
harness = false
