[package]
name = "platform-linux"
version = "0.1.0"
edition.workspace = true

[features]
x11 = ["dep:x11rb"]

[dependencies]
mesh-agent-core = { path = "../mesh-agent-core" }
mesh-protocol = { path = "../mesh-protocol" }
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

# Optional X11 support
x11rb = { version = "0.13", features = ["allow-unsafe-code"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
