[package]
name = "platform-linux"
version = "0.15.4"
edition.workspace = true

[dependencies]
mesh-agent-core = { path = "../mesh-agent-core" }
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile.workspace = true
