[package]
name = "platform-linux"
version = "0.15.4"
edition.workspace = true
license.workspace = true
publish = false  # internal workspace crate; ships via GitHub Releases, not crates.io

[dependencies]
mesh-agent-core = { path = "../mesh-agent-core" }
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile.workspace = true

[lints]
workspace = true
